# turbomcp

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  RELEASE_NOTES_1.1.0-exp.md  docker-compose.yml  project-report.md  tarpaulin.toml  test-config.toml
.cargo/: config.toml
.github/workflows/: ci.yml  comprehensive-testing.yml  coverage.yml
crates/: README.md
crates/turbomcp/: CONTRIBUTING.md  Cargo.toml  README.md
crates/turbomcp-cli/: Cargo.toml  README.md
crates/turbomcp-cli/src/: lib.rs  main.rs
crates/turbomcp-cli/tests/: cli_structure_tests.rs  functional_cli_tests.rs  http_functionality_tests.rs  integration_test.rs  main_integration_tests.rs  main_tests.rs
crates/turbomcp-client/: Cargo.toml  README.md
crates/turbomcp-client/src/: lib.rs
crates/turbomcp-client/tests/: cli_tests.rs  lib_tests.rs
crates/turbomcp-core/: Cargo.toml  README.md
crates/turbomcp-core/src/: config.rs  context.rs  error.rs  error_utils.rs  lib.rs  message.rs  registry.rs  session.rs  state.rs  types.rs  utils.rs
crates/turbomcp-core/tests/: comprehensive_context_tests.rs  comprehensive_error_tests.rs  comprehensive_message_advanced_tests.rs  comprehensive_message_tests.rs  comprehensive_session_tests.rs  comprehensive_utils_tests.rs  config_tests.rs  types_tests.rs
crates/turbomcp-dpop/: Cargo.toml  README.md
crates/turbomcp-dpop/examples/: basic_dpop.rs
crates/turbomcp-dpop/src/: errors.rs  hsm.rs  keys.rs  lib.rs  proof.rs  redis_storage.rs  test_utils.rs  types.rs
crates/turbomcp-dpop/tests/: integration_tests.rs
crates/turbomcp-macros/: Cargo.toml  README.md
crates/turbomcp-macros/src/: helpers.rs  lib.rs  prompt.rs  resource.rs  schema.rs  server.rs  tool.rs  tool_router.rs  utils.rs
crates/turbomcp-macros/tests/: error_integration_tests.rs  helper_macro_tests.rs
crates/turbomcp-protocol/: Cargo.toml  README.md
crates/turbomcp-protocol/src/: capabilities.rs  jsonrpc.rs  lib.rs  types.rs  validation.rs  versioning.rs
crates/turbomcp-protocol/tests/: comprehensive_capabilities_tests.rs  comprehensive_jsonrpc_tests.rs  comprehensive_validation_tests.rs  comprehensive_versioning_tests.rs  types_tests.rs
crates/turbomcp-server/: Cargo.toml  LICENSE  README.md
crates/turbomcp-server/src/: config.rs  error.rs  handlers.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  middleware.rs  registry.rs  routing.rs  security.rs  server.rs
crates/turbomcp-server/tests/: comprehensive_routing_tests.rs  config_tests.rs  error_tests.rs  handlers_simple_tests.rs  lib_tests.rs  lifecycle_tests.rs  main_tests.rs  metrics_tests.rs  middleware_tests.rs  registry_comprehensive_tests.rs  registry_tests.rs  routing_simple_tests.rs  security_middleware_tests.rs  server_async_coverage_tests.rs  server_simple_tests.rs  server_sync_coverage_tests.rs  server_tests.rs  shared_config_tests.rs  simple_main_tests.rs  test_helpers.rs  transport_methods_tests.rs
crates/turbomcp-server/tests/common/: mod.rs
crates/turbomcp-transport/: Cargo.toml  README.md  SECURITY_FEATURES.md  TLS_SECURITY.md
crates/turbomcp-transport/src/: axum_integration.rs  child_process.rs  compression.rs  config.rs  core.rs  dpop.rs  lib.rs  metrics.rs  pool.rs  robustness.rs  stdio.rs  tcp.rs  test_env.rs  tls.rs  tower.rs  unix.rs  websocket.rs
crates/turbomcp-transport/src/tls/: tests.rs
crates/turbomcp-transport/tests/: compression_tests.rs  simple_transport_tests.rs  tcp_tests.rs  unix_tests.rs
crates/turbomcp/benches/: performance_tests.rs
crates/turbomcp/examples/: 01_hello_world.rs  02_tools_basics.rs  03_macros_vs_builders.rs  04_comprehensive_server.rs  05_advanced_patterns.rs.disabled  06_macro_showcase.rs  07_performance.rs  08_integration.rs.disabled  09_macros.rs  09_oauth_authentication.rs  10_http_server.rs  11_child_process.rs  README.md  comprehensive_demo.rs  deployment_patterns.rs  graceful_shutdown.rs  macro_test.rs  progressive_enhancement.rs  readme_example.rs  tcp_only_server.rs  transport_showcase.rs
crates/turbomcp/src/: auth.rs  context.rs  context_factory.rs  elicitation.rs  helpers.rs  injection.rs  lib.rs  lifespan.rs  macros.rs  progress.rs  registry.rs  router.rs  schema.rs  server.rs  session.rs  simd.rs  sse_server.rs  structured.rs  test_utils.rs  transport.rs  uri.rs  validation.rs
crates/turbomcp/tests/: basic_integration.rs  comprehensive_coverage.rs  feature_coverage.rs  integration_examples_tests.rs  integration_tests.rs  lifespan_coverage.rs  macro_dogfood_tests.rs  macro_end_to_end_tests.rs  macro_metadata_consistency.rs  macro_simple_test.rs  oauth_integration_tests.rs  oauth_redirect_validation_tests.rs  registry_tests.rs  remaining_modules_coverage.rs  runtime_configuration_tests.rs  zero_tolerance_enforcement.rs
demo/: Cargo.toml  MCP_SETUP.md  README.md  lmstudio-config.json
demo/src/: main.rs
examples/: README.md  basic.rs  hello_world.rs  http_server.rs  minimal_turbomcp.rs  security_headers_demo.rs  simd_performance.rs  tools_and_schema.rs  turbomcp_demo.rs  with_state.rs
scripts/: coverage.sh  prepare-release.sh  publish-crates.sh  release.sh  run_comprehensive_tests.sh  run_tests.sh  simple-release-check.sh
tests/: benchmark_tests.rs  coverage_tests.rs  error_tests.rs  fault_tolerance_tests.rs  integration.rs  property_tests.rs  state_tests.rs
tests/integration/: auth_flows_test.rs  error_propagation_fault_injection_test.rs  macro_system_test.rs  macro_system_test_comprehensive.rs  protocol_validation_test.rs  server_middleware_routing_test.rs  transport_implementations_test.rs  transport_robustness_test.rs
tests/performance/: performance_concurrency_test.rs
tests/property/: property_based_tests.rs
