# Workspace-only Cargo.toml - main SDK is in crates/turbomcp

[workspace]
members = [
    "crates/turbomcp-core",
    "crates/turbomcp-protocol", 
    "crates/turbomcp-transport",
    "crates/turbomcp-server",
    "crates/turbomcp-client",
    "crates/turbomcp-cli",
    "crates/turbomcp",
    "crates/turbomcp-macros",
    "crates/turbomcp-dpop",
]
resolver = "2"

[workspace.lints.clippy]
# Allow pedantic lints that are too strict for this codebase
missing_errors_doc = "allow"
missing_panics_doc = "allow" 
module_name_repetitions = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
single_match_else = "allow"
match_same_arms = "allow"
similar_names = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
struct_excessive_bools = "allow"
uninlined_format_args = "allow"
# Allow test-specific patterns
assertions_on_constants = "allow"
const_is_empty = "allow"

[workspace.dependencies]
# Core async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Test utilities
walkdir = "2.4"

# Serialization with performance focus
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
rmp-serde = "1.1"  # MessagePack for binary efficiency
sonic-rs = "0.3"   # High-performance JSON
simd-json = "0.13" # SIMD-accelerated JSON parsing
bincode = "1.3"
serde_cbor = "0.11"

# Schema validation and generation
schemars = { version = "0.8", features = ["chrono04", "uuid1"] }
jsonschema = "0.17"

# HTTP/WebSocket/Network
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "brotli", "gzip"] }
axum = { version = "0.7", features = ["ws", "headers", "tracing", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Error handling and diagnostics
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "7.0", features = ["fancy"] }
color-eyre = "0.6"

# Observability and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "tracing-log"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Concurrency and synchronization
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"
flume = "0.11"
tokio-stream = "0.1"

# Configuration and CLI
config = "0.14"
clap = { version = "4.4", features = ["derive", "env", "color"] }
clap_complete = "4.4"

# Security and authentication
ring = "0.17"
base64 = "0.22"
uuid = { version = "1.6", features = ["v4", "serde"] }
jsonwebtoken = "9.2"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "macros"] }

# Memory and performance optimizations
bytes = { version = "1.5", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
compact_str = { version = "0.7", features = ["serde"] }
ahash = "0.8"
once_cell = "1.19"
arc-swap = "1.6"

# Development and testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
wiremock = "0.5"
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json", "redactions"] }
rand = "0.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"
mock_instant = "0.3"
serial_test = "3.0"
tempfile = "3.8"
sha2 = "0.10"

# Documentation
doc-comment = "0.3"

# Workspace dependencies are defined below

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.test]
opt-level = 1
debug = 2

# Examples are in the individual crates


