[package]
name = "turbomcp"
version = "1.0.0"
edition = "2021"
authors = ["Epistates"]
description = "High-performance Rust SDK for the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
keywords = ["mcp", "sdk", "rust", "performance", "security"]
categories = ["api-bindings", "network-programming"]

