[package]
name = "turbomcp-demo"
version = "0.1.0"
edition = "2021"
description = "Demo project showcasing TurboMCP in action"

[workspace]

[dependencies]
# Using the TurboMCP SDK for zero boilerplate
turbomcp = { path = "../crates/turbomcp", features = ["full"] }

# Basic dependencies for a real project
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.0"