[package]
name = "turbomcp-cli"
version = "1.0.0"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Command-line tools for managing and testing MCP servers"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
keywords = ["mcp", "cli", "tools", "testing", "management"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "turbomcp-cli"
path = "src/main.rs"