[package]
name = "turbomcp-client"
version = "1.1.0-exp"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Robust MCP client implementation with connection management and error recovery"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
keywords = ["mcp", "client", "connection", "recovery", "async"]
categories = ["development-tools", "network-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
turbomcp-core = { version = "1.1.0-exp", path = "../turbomcp-core" }
turbomcp-protocol = { version = "1.1.0-exp", path = "../turbomcp-protocol" }
turbomcp-transport = { version = "1.1.0-exp", path = "../turbomcp-transport" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }