[package]
name = "turbomcp-macros"
version = "1.1.0-exp"
edition = "2024"
description = "Procedural macros for ergonomic MCP tool and resource registration"
license = "MIT"
authors = ["Nicholas Paterno <nick@epistates.com>"]
repository = "https://github.com/Epistates/turbomcp"
keywords = ["mcp", "macros", "procedural", "derive", "codegen"]
categories = ["development-tools"]
readme = "README.md"
rust-version = "1.89.0"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
turbomcp-core = { version = "1.1.0-exp", path = "../turbomcp-core" }

# JSON Schema generation
schemars = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
turbomcp-protocol = { version = "1.1.0-exp", path = "../turbomcp-protocol" }
async-trait = "0.1"

[features]
default = ["schema"]
schema = ["schemars"]