[package]
name = "turbomcp-protocol"
version = "1.1.0-exp"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Model Context Protocol (MCP) specification implementation with JSON-RPC and schema validation"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
keywords = ["mcp", "protocol", "jsonrpc", "schema", "validation"]
categories = ["development-tools", "network-programming"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
turbomcp-core = { version = "1.1.0-exp", path = "../turbomcp-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"