[package]
name = "turbomcp-transport"
version = "1.0.1"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Multi-protocol transport layer supporting HTTP, WebSocket, STDIO, and TCP for MCP communications"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
keywords = ["mcp", "transport", "http", "websocket", "networking"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
# Core dependencies
turbomcp-core = { version = "1.0.1", path = "../turbomcp-core" }
tokio = { workspace = true, features = ["net", "io-std", "io-util", "process", "sync", "time"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
futures = { workspace = true }
futures-util = { version = "0.3", optional = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP/WebSocket (optional)
axum = { version = "0.7", optional = true, features = ["ws", "json"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "compression-gzip", "timeout", "trace"] }
hyper = { version = "1.0", optional = true }
hyper-util = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
reqwest = { version = "0.12", optional = true, features = ["json"] }
async-stream = { version = "0.3", optional = true }

# Compression (optional)
flate2 = { version = "1.0", optional = true }
brotli = { version = "6.0", optional = true }
lz4_flex = { version = "0.11", optional = true }

# TLS support (optional)
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }

# Observability
tracing = { workspace = true }
metrics = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = "2.5"
ahash = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
fastrand = "2.0"
once_cell = "1.19"

# Development utilities
wiremock = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = ["stdio"]

# Core transports
stdio = []
http = ["axum", "tower", "tower-http", "hyper", "hyper-util", "reqwest", "async-stream"]
websocket = ["tokio-tungstenite", "http", "futures-util"]
tcp = ["tokio/net"]
unix = ["tokio/net"]

# gRPC support (future)
grpc = ["http"]

# QUIC support (future) 
quic = []

# Compression support
compression = ["flate2", "brotli", "lz4_flex"]

# TLS support
tls = ["rustls", "tokio-rustls"]

# Observability
metrics = ["dep:metrics"]

# Development features
test-utils = ["dep:wiremock"]

